2006-03-22  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Engine doesn't export, so don't import its functions

2006-03-22  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: aptget_update now returns boolean success value, is
	inhibited if user has disabled binary mode, and has apt's own
	"quiet" controlled by fink's "verbose" flag. $quiet parameter now
	controls execute() verbosity.
	* SelfUpdate.pm: Use Engine's aptget_update instead of rewriting
	it.

2006-03-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Config.pm: Don't whine if etc/apt doesn't exist.

2006-03-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Finally.pm: Don't run in forks.

2006-03-21  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: In -m mode, validate .info of deps also, not just
	explicitly requested pkgs.

2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: New BuildConflicts routine that should work.

2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: De-blockify &finalize.
	* Engine.pm, PkgVersion.pm: Add a finally to remove buildlocks on build
	failure.
	* Config.pm: Make --no-use-binary-dist actually work.

2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Finally.pm: New way to create cleanup functions.
	* Engine.pm: Adapt to new Finally, add 'finalizer' method to schedule a
	function to run when process finishes.
	* Engine.pm, PkgVersion.pm: Move AutoScanpackages to happen just after
	buildlock removal for each package. The apt-get update is only run at the
	end of a build, using the new finalizer mechanism.

2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm: New function apt_available, to check if apt is around.
	* Engine.pm: Make things work with apt uninstalled.

2006-03-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: when an error is generated on Intel hardware, warn 
	users that many maintainers don't have Intel hardware.
