@@ -1,5 +1,9 @@
 2006-03-22  Dave Vasilevsky  <vasi@users.sourceforge.net>
 
+	* finally.t: Test whether we keep the exit status.
+
+2006-03-22  Dave Vasilevsky  <vasi@users.sourceforge.net>
+
 	* finally.t: Test what happens when we fork.
 
 2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>
